--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-flex-grid": "^1.0.0",
     "react-native-paper": "^5.11.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
